--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,4 @@
 html {
-  height: 100%;
   scroll-behavior: smooth;
 }
 
@@ -20,10 +19,6 @@ body {
 
 .hidden {
   display: none;
-}
-
-p {
-  margin: 0;
 }
 
 /* nav */
@@ -65,15 +60,35 @@ p {
 }
 
 /* main */
+
 .mediaContainer {
   margin: 0 auto;
   text-align: center;
-  width: 100%;
+  width: 50%;
 }
 
 div {
-  display: inline-block;
+  /* display: inline-block; */
   margin: 10px;
+}
+
+.lyricsCon {
+  background-color: #58524b;
+  text-align: center;
+  font-size: 14px;
+  padding: 20px;
+}
+
+.title {
+  text-align: center;
+  background-color: #58524b;
+  padding-top: 10px;
+}
+
+.lyrics {
+  display: inline-block;
+  padding: 10px;
+  text-align: justify;
 }
 
 button {
@@ -90,13 +105,26 @@ button:hover {
 }
 
 img {
-  width: 90%;
+  width: 60%;
 }
 
 .controllers {
   display: block;
   margin-top: 8px;
   padding-bottom: 15px;
+}
+
+.movieCon {
+  display: inline;
+}
+
+.desc {
+  background-color: #58524b;
+}
+
+.vidDesc {
+  text-align: center;
+  font-size: 14px;
 }
 
 /* footer */
@@ -120,15 +148,11 @@ img {
 }
 @media (max-width: 700px) {
   .logo {
-    width: 50%;
+    width: 15%;
   }
 
   .mainNav {
     text-align: center;
     width: 100vw;
-  }
-
-  .vidCon {
-    width: 90vw;
   }
 }
